--- a/.travis.yml
+++ b/.travis.yml
@@ -5,16 +5,11 @@ notifications:
     recipients:
         - rdebleu@eWallah.net
 
-sudo: required
+sudo: false
 
 addons:
-  firefox: "47.0.1"
   postgresql: "9.6"
-  apt:
-    packages:
-      - oracle-java8-installer
-      - oracle-java8-set-default
-
+  
 cache:
   directories:
     - $HOME/.composer/cache
@@ -39,7 +34,7 @@ before_install:
   - export PATH="$(cd ci/bin; pwd):$(cd ci/vendor/bin; pwd):$PATH"
 
 install:
-  - moodle-plugin-ci install
+  - moodle-plugin-ci install --no-init
 
 script:
   - moodle-plugin-ci phplint
@@ -50,5 +45,5 @@ script:
   - moodle-plugin-ci savepoints
   - moodle-plugin-ci mustache
   - moodle-plugin-ci grunt
-  - moodle-plugin-ci phpunit
-  - moodle-plugin-ci behat
+  #- moodle-plugin-ci phpunit
+  #- moodle-plugin-ci behat
