--- a/.travis.yml
+++ b/.travis.yml
@@ -1,49 +1,60 @@
 language: php
+dist: bionic
 
-notifications:
-  email:
-    recipients:
-        - rdebleu@eWallah.net
+sudo: required
 
-sudo: false
+services:
+  - mysql
 
 addons:
   postgresql: "9.6"
-  
+
 cache:
   directories:
     - $HOME/.composer/cache
     - $HOME/.npm
 
 php:
- - 7.0
  - 7.2
 
 env:
-  - DB=pgsql MOODLE_BRANCH=MOODLE_34_STABLE
   - DB=pgsql MOODLE_BRANCH=master
-  - DB=mysqli MOODLE_BRANCH=MOODLE_34_STABLE
   - DB=mysqli MOODLE_BRANCH=master
- 
+  - DB=mariadb MOODLE_BRANCH=master
+
+matrix:
+  include:
+    - php: 7.1
+      env: DB=pgsql MOODLE_BRANCH=MOODLE_34_STABLE
+    - php: 7.1
+      env: DB=pgsql MOODLE_BRANCH=MOODLE_35_STABLE
+    - php: 7.2
+      env: DB=pgsql MOODLE_BRANCH=MOODLE_36_STABLE
+    - php: 7.2
+      env: DB=pgsql MOODLE_BRANCH=MOODLE_37_STABLE
+    - php: 7.2
+      env: DB=pgsql MOODLE_BRANCH=MOODLE_38_STABLE
+    - php: 7.3
+      env: DB=pgsql MOODLE_BRANCH=master
+
 before_install:
   - phpenv config-rm xdebug.ini
   - nvm install 8.9
   - nvm use 8.9
   - cd ../..
-  - composer create-project -n --no-dev --prefer-dist moodlerooms/moodle-plugin-ci ci ^2
+  - composer create-project -n --no-dev --prefer-dist blackboard-open-source/moodle-plugin-ci ci ^2
   - export PATH="$(cd ci/bin; pwd):$(cd ci/vendor/bin; pwd):$PATH"
 
 install:
-  - moodle-plugin-ci install --no-init
+  - moodle-plugin-ci install
 
 script:
   - moodle-plugin-ci phplint
   - moodle-plugin-ci phpcpd
   - moodle-plugin-ci phpmd
+  - moodle-plugin-ci phpdoc
   - moodle-plugin-ci codechecker
   - moodle-plugin-ci validate
   - moodle-plugin-ci savepoints
   - moodle-plugin-ci mustache
   - moodle-plugin-ci grunt
-  #- moodle-plugin-ci phpunit
-  #- moodle-plugin-ci behat
