--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 language: php
-dist: bionic
 
-sudo: required
+os:
+  - linux
+
+dist: bionic
 
 services:
   - mysql
@@ -15,32 +17,24 @@ cache:
     - $HOME/.npm
 
 php:
- - 7.2
+ - 7.3
 
 env:
   - DB=pgsql MOODLE_BRANCH=master
   - DB=mysqli MOODLE_BRANCH=master
-  - DB=mariadb MOODLE_BRANCH=master
 
-matrix:
+jobs:
   include:
     - php: 7.1
-      env: DB=pgsql MOODLE_BRANCH=MOODLE_34_STABLE
-    - php: 7.1
       env: DB=pgsql MOODLE_BRANCH=MOODLE_35_STABLE
-    - php: 7.2
-      env: DB=pgsql MOODLE_BRANCH=MOODLE_36_STABLE
-    - php: 7.2
-      env: DB=pgsql MOODLE_BRANCH=MOODLE_37_STABLE
-    - php: 7.2
-      env: DB=pgsql MOODLE_BRANCH=MOODLE_38_STABLE
-    - php: 7.3
+    - env: DB=pgsql MOODLE_BRANCH=MOODLE_37_STABLE
+    - env: DB=pgsql MOODLE_BRANCH=MOODLE_38_STABLE
+    - php: 7.4
       env: DB=pgsql MOODLE_BRANCH=master
 
 before_install:
   - phpenv config-rm xdebug.ini
-  - nvm install 8.9
-  - nvm use 8.9
+  - nvm install 14.2.0
   - cd ../..
   - composer create-project -n --no-dev --prefer-dist blackboard-open-source/moodle-plugin-ci ci ^2
   - export PATH="$(cd ci/bin; pwd):$(cd ci/vendor/bin; pwd):$PATH"
@@ -49,6 +43,7 @@ install:
   - moodle-plugin-ci install
 
 script:
+  - moodle-plugin-ci phpunit
   - moodle-plugin-ci phplint
   - moodle-plugin-ci phpcpd
   - moodle-plugin-ci phpmd
