--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,17 +1,28 @@
 name: Tests
 
-on: push
+on: [push, pull_request]
 
 jobs:
   ci:
-    runs-on: ubuntu-18.04
+    name: ci
+    runs-on: ubuntu-latest
 
     services:
+      postgres:
+        image: postgres
+        env:
+          POSTGRES_USER: 'postgres'
+          POSTGRES_HOST_AUTH_METHOD: 'trust'
+        options: --health-cmd="pg_isready" --health-interval 10s --health-timeout 5s --health-retries 5
+        ports:
+          - 5432:5432
       mariadb:
-        image: mariadb
+        image: mariadb:10
         env:
           MYSQL_USER: 'root'
           MYSQL_ALLOW_EMPTY_PASSWORD: "true"
+          MYSQL_CHARACTER_SET_SERVER: "utf8mb4"
+          MYSQL_COLLATION_SERVER: "utf8mb4_unicode_ci"
         options: --health-cmd="mysqladmin ping" --health-interval 10s --health-timeout 5s --health-retries 3
         ports:
           - 3306:3306
@@ -19,75 +30,121 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        moodle-branch: ['MOODLE_39_STABLE']
-        php: ['7.3']
-        database: ['mariadb']
-
-    name: ${{ matrix.moodle-branch }}  php ${{ matrix.php }}  ${{ matrix.operating-system }}
+        moodle-branch: ['MOODLE_500_STABLE', 'MOODLE_501_STABLE', 'main']
+        php: ['8.3', '8.4']
+        database: ['mariadb', 'pgsql']
 
     steps:
       - name: checkout plugin
-        uses: actions/checkout@v2
+        uses: actions/checkout@v5
         with:
           path: this-plugin
-
-      - name: install node
-        uses: actions/setup-node@v1
-        with:
-          node-version: '14.15.0'
 
       - name: setup PHP
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php }}
-          extensions: mbstring, mysqli, gd, zip
-
-      - name: checkout moodle-plugin-ci
-        uses: actions/checkout@v2
-        with:
-          repository: moodlehq/moodle-plugin-ci
-          path: ci
+          ini-values: max_input_vars=5000
+          tools: composer:v2.5
+          coverage: pcov
 
       - name: composer
         run: |
-           composer install
-           echo "$(cd bin; pwd)" >> $GITHUB_PATH
-           echo "$(cd vendor/bin; pwd)" >> $GITHUB_PATH
+           composer create-project -n --no-dev --prefer-dist moodlehq/moodle-plugin-ci ci
+           echo $(cd ci/bin; pwd) >> $GITHUB_PATH
+           echo $(cd ci/vendor/bin; pwd) >> $GITHUB_PATH
            sudo locale-gen en_AU.UTF-8
-        working-directory: ci
 
       - name: install Moodle
-        run: moodle-plugin-ci install -v --db-host=127.0.0.1 --plugin this-plugin
+        run: moodle-plugin-ci --ansi install --db-host=127.0.0.1 --plugin this-plugin
         env:
           DB: ${{ matrix.database }}
           MOODLE_BRANCH: ${{ matrix.moodle-branch }}
 
       - name: phplint
-        run: moodle-plugin-ci phplint
-
-      - name: phpcpd
-        run: moodle-plugin-ci phpcpd
+        if: ${{ !cancelled() }}
+        run: moodle-plugin-ci --ansi phplint
 
       - name: phpmd
-        run: moodle-plugin-ci phpmd
+        if: ${{ !cancelled() }}
+        run: moodle-plugin-ci --ansi phpmd
+
+      - name: phpdoc
+        if: ${{ !cancelled() }}
+        run: moodle-plugin-ci --ansi phpdoc
 
       - name: codechecker
-        run: moodle-plugin-ci codechecker
+        if: ${{ !cancelled() }}
+        run: moodle-plugin-ci --ansi codechecker
 
       - name: validate
-        run: moodle-plugin-ci validate
+        if: ${{ !cancelled() }}
+        run: moodle-plugin-ci --ansi validate
 
       - name: savepoints
-        run: moodle-plugin-ci savepoints
-
-      - name: mustache
-        run: moodle-plugin-ci mustache
+        if: ${{ !cancelled() }}
+        run: moodle-plugin-ci --ansi savepoints
 
       - name: grunt
-        run: moodle-plugin-ci grunt
+        if: ${{ !cancelled() }}
+        run: moodle-plugin-ci --ansi grunt
 
-      - name: phpunit 
-        run: moodle-plugin-ci phpunit --coverage-text
+      - name: mustache
+        if: ${{ !cancelled() }}
+        run: moodle-plugin-ci --ansi mustache
+
+      - name: phpunit
+        if: ${{ !cancelled() }}
+        run: moodle-plugin-ci --ansi phpunit --testdox --coverage-text --coverage-clover
+
+      - name: privacy
+        if: ${{ matrix.moodle-branch == 'main'}}
+        run: vendor/bin/phpunit --colors --no-coverage --testsuite tool_dataprivacy_testsuite,tool_policy_testsuite,core_privacy_testsuite
+        working-directory: moodle
+
+      - name: other
+        if: ${{ matrix.moodle-branch == 'main'}}
+        run: vendor/bin/phpunit --colors --no-coverage --testsuite core_availability_testsuite
+        working-directory: moodle
+
+      - name: coveralls
+        if: ${{ matrix.moodle-branch == 'main'}}
+        run: moodle-plugin-ci coveralls-upload || true
+        env:
+          COVERALLS_REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: firefox
-        run: moodle-plugin-ci behat
+        if: ${{ !cancelled() }}
+        run: moodle-plugin-ci --ansi behat
+
+      - name: faildump
+        if: ${{ failure() && steps.behat.outcome == 'failure' }}
+        uses: actions/upload-artifact@v4
+        with:
+          name: firefox faildump (${{ join(matrix.*, ', ') }})
+          path: ${{ github.workspace }}/moodledata/behat_dump
+          retention-days: 7
+          if-no-files-found: ignore
+ 
+      - name: chrome
+        if: ${{ !cancelled() }}
+        run: moodle-plugin-ci --ansi behat --profile chrome
+
+      - name: firefox classic
+        id: behat
+        if: ${{ !cancelled() }}
+        run: moodle-plugin-ci --ansi behat --suite="classic"
+      
+      - name: chrome classic
+        if: ${{ !cancelled() }}
+        run: moodle-plugin-ci --ansi behat  --suite="classic" --profile chrome
+
+      - name: admin bookmarks
+        if: ${{ matrix.moodle-branch == 'main'}}
+        run: moodle-plugin-ci --ansi behat --auto-rerun=0 --profile chrome public/blocks/admin_bookmarks
+        working-directory: moodle
+
+      - name: admin xmldb
+        if: ${{ matrix.moodle-branch == 'main'}}
+        run: moodle-plugin-ci --ansi behat --auto-rerun=0 --profile chrome public/admin/tool/xmldb
+        working-directory: moodle
